# ourgroceries-cli-agentic

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ourgroceries_tool.py  pyproject.toml  requirements.txt
groceries/: cli.py
